[gd_scene load_steps=8 format=3 uid="uid://c1wju77r3clhd"]

[ext_resource type="Texture2D" uid="uid://bi10emnb11yu4" path="res://assets/tilemap.png" id="1_014kd"]
[ext_resource type="Script" uid="uid://d014o47235k7p" path="res://scenes/Objects/Level1/base/level_1.gd" id="1_i67f7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bswci"]
size = Vector2(16, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33e4k"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_i14x4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.764706, 0.219608, 0.27451, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1qa8t"]
resource_name = "hurtEffect"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.764706, 0.219608, 0.27451, 0.8), Color(1, 1, 1, 0.890196)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1.36604e-05),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.5, 0), Vector2(-0.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2fj32"]
_data = {
&"RESET": SubResource("Animation_i14x4"),
&"hurtEffect": SubResource("Animation_1qa8t")
}

[node name="Level 1" type="Area2D"]
collision_layer = 4
script = ExtResource("1_i67f7")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture_filter = 1
texture = ExtResource("1_014kd")
region_enabled = true
region_rect = Rect2(272, 256, 16, 16)

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
clip_children = 2
offset_left = -18.0
offset_top = -19.0
offset_right = 22.0
offset_bottom = 21.0
color = Color(0.764706, 0.219608, 0.27451, 0)

[node name="Collider" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_bswci")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_33e4k")

[node name="DamageTimer" type="Timer" parent="."]

[node name="HurtAnimTimer" type="Timer" parent="."]

[node name="hurt" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2fj32")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="HurtAnimTimer" to="." method="_on_hurt_anim_timer_timeout"]
